--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CryptoFund Racing - Accelerate Innovation with Crypto Funding</title>
+    <title>Crypto Fun Racing - Accelerate Innovation with Crypto Funding</title>
     <meta name="description" content="Join the future of decentralized funding. Support groundbreaking crypto projects, invest in tomorrow's technology, and be part of the blockchain revolution." />
     <meta name="keywords" content="crypto, funding, blockchain, DeFi, crowdfunding, cryptocurrency, Web3, Ethereum, MetaMask" />
-    <meta name="author" content="CryptoFund Racing" />
+    <meta name="author" content="Crypto Fun Racing" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://cryptofundracing.com/" />
-    <meta property="og:title" content="CryptoFund Racing - Accelerate Innovation with Crypto Funding" />
+    <meta property="og:title" content="Crypto Fun Racing - Accelerate Innovation with Crypto Funding" />
     <meta property="og:description" content="Join the future of decentralized funding. Support groundbreaking crypto projects and invest in tomorrow's technology." />
     <meta property="og:image" content="/og-image.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://cryptofundracing.com/" />
-    <meta property="twitter:title" content="CryptoFund Racing - Accelerate Innovation with Crypto Funding" />
+    <meta property="twitter:title" content="Crypto Fun Racing - Accelerate Innovation with Crypto Funding" />
     <meta property="twitter:description" content="Join the future of decentralized funding. Support groundbreaking crypto projects and invest in tomorrow's technology." />
     <meta property="twitter:image" content="/og-image.jpg" />
     
